--- a/material/aulas/IA/lab02/classificador-knn.ipynb
+++ b/material/aulas/IA/lab02/classificador-knn.ipynb
@@ -2021,7 +2021,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "sCoFQ2aKo07u",
-        "outputId": "233587ac-76be-4e7f-e66c-124076ae95f6",
+        "outputId": "3d0a5e5a-2114-4c5b-f2f3-b51602b694fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2065,12 +2065,12 @@
       ],
       "metadata": {
         "id": "NQ1LfyM9O8li",
-        "outputId": "0b85c164-45ce-4500-dd23-9d63834ec980",
+        "outputId": "75bb38c3-3b02-4498-8741-537b71bc1a24",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2112,12 +2112,12 @@
       ],
       "metadata": {
         "id": "6O7-jv4-O_UJ",
-        "outputId": "58120805-9877-4ad8-d21c-6636da7021de",
+        "outputId": "c1609d2d-f406-4444-a5ff-442414841bee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -2146,13 +2146,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#EXERCICIO Nomeando a coluna de acordo com o arquivo\n",
         "X.columns = ['age', 'menopause', 'tumor-size', 'inv-nodes','node-caps', 'deg-malig', 'breast', 'breast-quad','irradiat']"
       ],
       "metadata": {
         "id": "ALRo6TfuPSNT"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2162,13 +2161,13 @@
       ],
       "metadata": {
         "id": "SK674td1POxQ",
-        "outputId": "8923865c-2db3-4880-dcc2-da64c1985dd1",
+        "outputId": "45116465-330b-4974-bca1-a35f853291cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2204,7 +2203,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-56d6bc27-3c9e-4d99-9160-d42e21528f04\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dc968c9e-2a98-44bb-8f38-f4ce874cfebf\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2374,7 +2373,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56d6bc27-3c9e-4d99-9160-d42e21528f04')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc968c9e-2a98-44bb-8f38-f4ce874cfebf')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2426,12 +2425,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-56d6bc27-3c9e-4d99-9160-d42e21528f04 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dc968c9e-2a98-44bb-8f38-f4ce874cfebf button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-56d6bc27-3c9e-4d99-9160-d42e21528f04');\n",
+              "        const element = document.querySelector('#df-dc968c9e-2a98-44bb-8f38-f4ce874cfebf');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2451,8 +2450,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f61a206d-3301-42df-9c26-f5318ec1be01\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f61a206d-3301-42df-9c26-f5318ec1be01')\"\n",
+              "<div id=\"df-6acded15-a655-4f3b-9690-b4662e6cd917\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6acded15-a655-4f3b-9690-b4662e6cd917')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2571,14 +2570,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f61a206d-3301-42df-9c26-f5318ec1be01 button');\n",
+              "        document.querySelector('#df-6acded15-a655-4f3b-9690-b4662e6cd917 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_661bace1-beca-4572-8cbb-352fcb34eb35\">\n",
+              "  <div id=\"id_b55fbad7-3eea-4e09-9420-6a8c644543ba\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -2622,7 +2621,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_661bace1-beca-4572-8cbb-352fcb34eb35 button.colab-df-generate');\n",
+              "        document.querySelector('#id_b55fbad7-3eea-4e09-9420-6a8c644543ba button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -2643,7 +2642,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 16
         }
       ]
     },
@@ -2655,12 +2654,12 @@
       ],
       "metadata": {
         "id": "79qxnmQ6QaDC",
-        "outputId": "065849c4-0986-4c9e-c490-441e682d464b",
+        "outputId": "4099bf64-e40b-4e8a-9acf-fb49de404033",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -2681,6 +2680,70 @@
     {
       "cell_type": "code",
       "source": [
+        "y.groupby('Class').size()\n"
+      ],
+      "metadata": {
+        "id": "zDZimxYHIj4Z",
+        "outputId": "4f33a0b7-9aba-44f3-a595-f44e51a0dc3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Class\n",
+              "no-recurrence-events    201\n",
+              "recurrence-events        85\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.isnull().sum()\n"
+      ],
+      "metadata": {
+        "id": "FmBXqT52Onej",
+        "outputId": "e57a7557-c833-42e2-b869-9375467e764f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "age            0\n",
+              "menopause      0\n",
+              "tumor-size     0\n",
+              "inv-nodes      0\n",
+              "node-caps      8\n",
+              "deg-malig      0\n",
+              "breast         0\n",
+              "breast-quad    1\n",
+              "irradiat       0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "selected_features = ['deg-malig', 'age', 'menopause', 'tumor-size', 'inv-nodes', 'node-caps', 'breast', 'breast-quad', 'irradiat']\n",
         "entradas = X[selected_features]\n",
         "classes = y['Class']  # Supondo que 'Class' seja a coluna alvo indicando recorrência ou não\n",
@@ -2688,12 +2751,12 @@
       ],
       "metadata": {
         "id": "a9GoYaolRBMK",
-        "outputId": "a9ade2d6-09a4-4d36-c502-bb9071184664",
+        "outputId": "907b7c61-4655-4196-de9e-7fa5ce919738",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -2707,30 +2770,95 @@
     {
       "cell_type": "code",
       "source": [
-        "# Separamos 20% para o teste\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "# Convertendo variáveis categóricas em variáveis dummy\n",
+        "X_encoded = pd.get_dummies(X)\n",
         "\n",
-        "entradas_treino, entradas_teste, classes_treino, classes_teste = train_test_split(entradas, classes, test_size=0.2)\n",
+        "# Dividindo os dados em conjuntos de treino e teste\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_encoded, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "print(f\"Formato das tabelas de dados de treino {entradas_treino.shape} e teste {entradas_teste.shape}\")\n"
+        "# Inicializando o classificador Random Forest\n",
+        "rf_classifier = RandomForestClassifier()\n",
+        "\n",
+        "# Treinando o modelo\n",
+        "rf_classifier.fit(X_train, y_train)\n",
+        "\n",
+        "# Fazendo previsões no conjunto de teste\n",
+        "predictions = rf_classifier.predict(X_test)\n",
+        "\n",
+        "# Calculando a acurácia do modelo\n",
+        "accuracy = accuracy_score(y_test, predictions)\n",
+        "print(\"Acurácia do modelo:\", accuracy)\n"
       ],
       "metadata": {
-        "id": "5O9sOsCLXBg5",
-        "outputId": "e4bb4d8b-e32a-4614-c50b-405a8a3b990c",
+        "id": "ZRJke1KzJq_B",
+        "outputId": "9f3e1a8a-8cd4-4191-f2ec-4297a2ca01f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-22-b76952573f13>:11: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+            "  rf_classifier.fit(X_train, y_train)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Acurácia do modelo: 0.6724137931034483\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "y_predicoes = rf_classifier.predict(X_test)\n",
+        "\n",
+        "# Metricas de precisão, revocação, f1-score e acurácia.\n",
+        "print(classification_report(y_test, y_predicoes))\n"
+      ],
+      "metadata": {
+        "id": "5O9sOsCLXBg5",
+        "outputId": "03b7b475-4cba-409c-88e1-0e76df6f46dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Formato das tabelas de dados de treino (228, 9) e teste (58, 9)\n"
+            "                      precision    recall  f1-score   support\n",
+            "\n",
+            "no-recurrence-events       0.67      0.95      0.79        37\n",
+            "   recurrence-events       0.67      0.19      0.30        21\n",
+            "\n",
+            "            accuracy                           0.67        58\n",
+            "           macro avg       0.67      0.57      0.54        58\n",
+            "        weighted avg       0.67      0.67      0.61        58\n",
+            "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TTmQlPVMNOa5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
