Organizando e comentando alguns blocos de codigo

--- a/material/aulas/IA/lab02/classificador-knn.ipynb
+++ b/material/aulas/IA/lab02/classificador-knn.ipynb
@@ -2046,9 +2046,31 @@
     {
       "cell_type": "code",
       "source": [
-        "#FAZENDO A IMPORTACAO DO DATASET DE ACORDO COM O SITE\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
+        "import pandas as pd\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.impute import SimpleImputer\n",
         "from ucimlrepo import fetch_ucirepo\n",
+        "from sklearn.metrics import classification_report\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "obDt10vCr19t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#FAZENDO A IMPORTACAO DO DATASET DE ACORDO COM O SITE\n",
         "\n",
         "# fetch dataset\n",
         "breast_cancer = fetch_ucirepo(id=14)\n",
@@ -2151,7 +2173,7 @@
       "metadata": {
         "id": "ALRo6TfuPSNT"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2689,7 +2711,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2709,9 +2731,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
         "# Visualizar distribuição para cada característica\n",
         "for column in X.columns:\n",
         "    plt.figure(figsize=(8, 6))\n",
@@ -2727,7 +2746,7 @@
           "height": 1000
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2825,7 +2844,7 @@
       "cell_type": "code",
       "source": [
         "X.isnull().sum()\n",
-        "# o que fazer com valores faltantes? Tirar a moda? Mediana? Como implemnetar isso?"
+        "# o que fazer com valores faltantes? Tirar a moda? Mediana? Como implementar isso?"
       ],
       "metadata": {
         "id": "FmBXqT52Onej",
@@ -2834,7 +2853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2861,9 +2880,10 @@
       "cell_type": "code",
       "source": [
         "# selected_features = ['deg-malig', 'age', 'menopause', 'tumor-size', 'inv-nodes', 'node-caps', 'breast', 'breast-quad', 'irradiat']\n",
+        "# Usando 2 features de parametro para treinamento.\n",
         "selected_features = ['age', 'tumor-size']\n",
         "entradas = X[selected_features]\n",
-        "classes = y['Class']  # Supondo que 'Class' seja a coluna alvo indicando recorrência ou não\n",
+        "classes = y['Class']\n",
         "print(f\"Formato das tabelas de dados {entradas.shape} e classes {classes.shape}\")\n"
       ],
       "metadata": {
@@ -2873,7 +2893,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2887,33 +2907,15 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "import pandas as pd\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "vrQB-hFxJLyK"
-      },
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Convertendo variáveis categóricas em variáveis dummy\n",
+        "# Crinado dummies por conta do tipo dos dados para o treinamento. (Fiz geral por conta da facilidade.)\n",
         "X_encoded = pd.get_dummies(X)\n",
         "\n",
         "# Dividindo os dados em conjuntos de treino e teste\n",
         "X_train, X_test, y_train, y_test = train_test_split(X_encoded, y, test_size=0.2, random_state=42)\n",
         "\n",
         "# Inicializando o classificador Random Forest\n",
+        "# Usei Random Forest porque no site do dataset era o melhor.\n",
         "rf_classifier = RandomForestClassifier()\n",
         "\n",
         "# Treinando o modelo\n",
@@ -2933,7 +2935,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2955,8 +2957,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import classification_report\n",
-        "\n",
+        "#Utilizando Metricas para uma visualizacao mais especifica e detalhada.\n",
         "y_predicoes = rf_classifier.predict(X_test)\n",
         "\n",
         "# Metricas de precisão, revocação, f1-score e acurácia.\n",
@@ -2969,7 +2970,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
